fix: remove background menu burger and fix height on mobile devices

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,7 +7,15 @@ html {
     @apply font-body;
     @apply text-white;
     @apply bg-purple-ultraDark;
-  }
+    height: -webkit-fill-available;
+
+}
+
+body {
+    min-height: 100vh;
+    /* mobile viewport bug fix */
+    min-height: -webkit-fill-available;
+}
 
 /* FONTS IMPORT */
 @font-face {
@@ -60,3 +68,14 @@ html {
 .no-scroll-bar-div {
     scrollbar-width: none;
 }
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.scrollbar-hidden::-webkit-scrollbar {
+    display: none;
+  }
+  
+  /* Hide scrollbar for IE, Edge add Firefox */
+  .scrollbar-hidden {
+    -ms-overflow-style: none;
+    scrollbar-width: none; /* Firefox */
+  }
